# qcv

./: .cproject  .project  CMakeLists.txt
opencv/: MatSource.cpp  MatSource.h
qcv-opencv-tools/: main.cpp
qcv-tools/: ImageReaderSource.cpp  ImageReaderSource.h  main.cpp
src/: BarcodeFormat.cpp  BarcodeFormat.h  Binarizer.cpp  Binarizer.h  BinaryBitmap.cpp  BinaryBitmap.h  DecodeHints.cpp  DecodeHints.h  Exception.cpp  Exception.h  Reader.cpp  Reader.h  Result.cpp  Result.h  ResultIO.cpp  ResultPoint.cpp  ResultPoint.h  ResultPointCallback.cpp  ResultPointCallback.h  qcv.h
src/common/: Array.h  BitArray.cpp  BitArray.h  BitArrayIO.cpp  BitMatrix.cpp  BitMatrix.h  BitSource.cpp  BitSource.h  CharacterSetECI.cpp  CharacterSetECI.h  Counted.h  DecoderResult.cpp  DecoderResult.h  DetectorResult.cpp  DetectorResult.h  GlobalHistogramBinarizer.cpp  GlobalHistogramBinarizer.h  GreyscaleLuminanceSource.cpp  GreyscaleLuminanceSource.h  GreyscaleRotatedLuminanceSource.cpp  GreyscaleRotatedLuminanceSource.h  GridSampler.cpp  GridSampler.h  HybridBinarizer.cpp  HybridBinarizer.h  ImageSource.h  ImageSourceIO.h  InvertedLuminanceSource.cpp  InvertedLuminanceSource.h  LuminanceSource.cpp  LuminanceSource.h  PerspectiveTransform.cpp  PerspectiveTransform.h  Point.h  Str.cpp  Str.h  StringUtils.cpp  StringUtils.h
src/common/detector/: MonochromeRectangleDetector.cpp  MonochromeRectangleDetector.h  WhiteRectangleDetector.cpp  WhiteRectangleDetector.h
src/common/detector/reedsolomon/: GenericGF.cpp  GenericGF.h  GenericGFPoly.cpp  GenericGFPoly.h  ReedSolomonDecoder.cpp  ReedSolomonDecoder.h  ReedSolomonException.cpp  ReedSolomonException.h
src/common/math/: JavaMath.h  MathUtils.h
src/exception/: ChecksumException.cpp  ChecksumException.h  FormatException.cpp  FormatException.h  IllegalArgumentException.cpp  IllegalArgumentException.h  IllegalStateException.h  NotFoundException.h  ReaderException.h
src/segment/: ImageSegment.cpp  ImageSegment.h
test/: test.cpp
tools/segment/: segment  segment.cpp
tools/show_and_adjust_mobile_phone_paper/: CMakeLists.txt  show_and_adjust_mobile_phone_paper.cpp  show_feature.cpp
tools/show_and_detect_colors/: CMakeLists.txt  show_and_detect_colors.cpp
tools/show_and_detect_lines/: CMakeLists.txt  show_and_detect_lines.cpp
tools/show_and_detect_rects/: CMakeLists.txt  show_and_detect_rects.cpp
tools/show_and_segment/: CMakeLists.txt  show_and_segment.cpp
tools/show_grabcut/: CMakeLists.txt  show_grabcut.cpp
tools/show_raw_image_data/: CMakeLists.txt  show_raw_image.cpp
tools/show_raw_zbar_project/: CMakeLists.txt  raw_image.c  raw_image.h  zbar_cv.cpp
tools/zbar/zbar-0.10/: Makefile  config.status  libtool
tools/zbar/zbar-0.10/zbar/: libzbar.la
tools/zbar/zbar-0.10/zbar/.deps/: zbar_libzbar_la-config.Plo  zbar_libzbar_la-convert.Plo  zbar_libzbar_la-decoder.Plo  zbar_libzbar_la-error.Plo  zbar_libzbar_la-image.Plo  zbar_libzbar_la-img_scanner.Plo  zbar_libzbar_la-processor.Plo  zbar_libzbar_la-refcnt.Plo  zbar_libzbar_la-scanner.Plo  zbar_libzbar_la-symbol.Plo  zbar_libzbar_la-video.Plo  zbar_libzbar_la-window.Plo
tools/zbar/zbar-0.10/zbar/.libs/: libzbar.lai  libzbar.so.0.2.0
tools/zbar/zbar-0.10/zbar/decoder/.deps/: zbar_libzbar_la-code128.Plo  zbar_libzbar_la-code39.Plo  zbar_libzbar_la-ean.Plo  zbar_libzbar_la-i25.Plo  zbar_libzbar_la-qr_finder.Plo
tools/zbar/zbar-0.10/zbar/processor/.deps/: zbar_libzbar_la-lock.Plo  zbar_libzbar_la-null.Plo  zbar_libzbar_la-posix.Plo
tools/zbar/zbar-0.10/zbar/qrcode/.deps/: zbar_libzbar_la-binarize.Plo  zbar_libzbar_la-isaac.Plo  zbar_libzbar_la-qrdec.Plo  zbar_libzbar_la-qrdectxt.Plo  zbar_libzbar_la-rs.Plo  zbar_libzbar_la-util.Plo
tools/zbar/zbar-0.10/zbar/video/.deps/: zbar_libzbar_la-null.Plo
tools/zbar/zbar-0.10/zbar/window/.deps/: zbar_libzbar_la-null.Plo
